# tauri-login-app

./: README.md  package.json  upload-tauri.mjs  upload-to-github.ps1  upload-to-github.sh
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
ui/: index.html  script.js  style.css
